--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,17 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87);
+  background-color: #242424; */
+  background-color: rgb(255, 255, 255, 0.96);
+  color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --primary-color: #32a837;
 }
 
 body {
@@ -27,13 +30,14 @@ body::-webkit-scrollbar {
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: gray;
+  background-color: rgb(208, 208, 208);
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 6px;
-  background-color: rgb(0, 106, 255);
+  background-color: var(--primary-color);
 }
