--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   /* color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
+  */
+  /* background-color: #242424;  */
   background-color: rgb(255, 255, 255, 0.96);
   color: black;
 
@@ -52,4 +53,9 @@ body::-webkit-scrollbar {
 
 .btn:active {
   transform: scale(0.99);
+}
+
+/* Style the clear button (×) */
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
 }
