--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,20 @@ body::-webkit-scrollbar {
 input[type="search"]::-webkit-search-cancel-button {
   display: none;
 }
+
+.appear {
+  animation: appear 1s forwards;
+  scale: 0;
+}
+
+@keyframes appear {
+  0%,
+  50% {
+    scale: 0.8;
+  }
+
+  50%,
+  100% {
+    scale: 1;
+  }
+}
