--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .appear {
   animation: appear 1s forwards;
-  scale: 0;
+  /* scale: 0; */
 }
 
 .alert {
@@ -70,12 +70,12 @@ input[type="search"]::-webkit-search-cancel-button {
 @keyframes appear {
   0%,
   50% {
-    scale: 0.8;
+    transform: translateY(-20px);
   }
 
   50%,
   100% {
-    scale: 1;
+    transform: translateY(0px);
   }
 }
 
